--- a/tutorial python/pydlab_class3_Pandas.ipynb
+++ b/tutorial python/pydlab_class3_Pandas.ipynb
@@ -997,6 +997,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Agregar Datos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Agregar Filas\n",
+    "Agregar elementos (filas) al final del dataframe en el dataframe,conservando las mismas columnas existentes, se puede hacer de varias formas.\n",
+    "La forma más sencilla es la siguiente:  \n",
+    "```  dataframe.loc[i] = [data] ```   \n",
+    "Donde:\n",
+    "* **dataframe**: Es tu dataframe =)\n",
+    "* **i** es el número de fila que quieres modificar o es una más abajo de la última para agregar una nueva\n",
+    "* **data** es la data que quieres agregar, la cual tiene que tener la misma estructura del dataframe (la misma cantidad de columnas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Agregar Columnas\n",
+    "Para agregar una nueva columna existe el comando insert que tiene la siguiente estructura:\n",
+    "```datafframe.insert(loc,nombrecolumna,valores)```\n",
+    "Donde: \n",
+    "* **dataframe**: Es tu dataframe =)\n",
+    "* **loc** es la posición donde se agregará la nueva columna\n",
+    "* **nombrecolumna** es el nombre de la columna\n",
+    "* **valores** es la data que quieres agregar, la cual tiene que tener la misma estructura del dataframe (la misma cantidad de filas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
