--- a/research/SEIR_SFK_scaling.ipynb
+++ b/research/SEIR_SFK_scaling.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 47,
    "metadata": {
     "scrolled": true
    },
@@ -52,11 +52,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tstate = '13101'\n",
+    "tstate = '13' # tstate = ['13','14']\n",
     "initdate = datetime(2020,5,15)"
    ]
   },
@@ -74,13 +74,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
     "beta = 0.12 # Contagion rate\n",
     "mu = 0.5 # E0/I0 initial rate\n",
-    "k=30 # Kinetic Saturation: 0 for mass action mixing\n",
+    "\n",
+    "k=40 # Kinetic Saturation: 0 for mass action mixing\n",
     "\n",
     "ScaleFactor = 1 # Scale Factor: Number of real infected over reported \n",
     "SeroPrevFactor = 1 # Sero Prevalence Factor: Adjust the proportion of the population that enters the virus dynamics\n",
@@ -96,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -192,13 +193,132 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Paralelización\n",
+    "1. Desacoplar objeto de datos externos, si no hay que importar los datos cada vez\n",
+    "2. Implementar dinámicas de paralelización para iterar con distintos parámetros (beta, k,mu, cuarentenas,seroprev, etc)\n",
+    "3. Agregar infectados acumulados al valor inicial\n",
+    "4."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Importando Datos\n",
+      "Fallecidos Acumulados\n",
+      "Fallecidos Excesivos\n",
+      "Infectados Activos Minciencia\n",
+      "Sochimi\n",
+      "Import Population\n",
+      "Infectados Activos\n",
+      "Infectados diarios\n",
+      "Infectados Acumulados\n",
+      "Done\n",
+      "Importando Datos\n",
+      "Fallecidos Acumulados\n",
+      "Fallecidos Excesivos\n",
+      "Infectados Activos Minciencia\n",
+      "Sochimi\n",
+      "Import Population\n",
+      "Infectados Activos\n",
+      "Infectados diarios\n",
+      "Infectados Acumulados\n",
+      "Done\n",
+      "Importando Datos\n",
+      "Fallecidos Acumulados\n",
+      "Fallecidos Excesivos\n",
+      "Infectados Activos Minciencia\n",
+      "Sochimi\n",
+      "Import Population\n",
+      "Infectados Activos\n",
+      "Infectados diarios\n",
+      "Infectados Acumulados\n",
+      "Done\n",
+      "Importando Datos\n",
+      "Fallecidos Acumulados\n",
+      "Fallecidos Excesivos\n",
+      "Infectados Activos Minciencia\n",
+      "Sochimi\n",
+      "Import Population\n",
+      "Infectados Activos\n",
+      "Infectados diarios\n",
+      "Infectados Acumulados\n",
+      "Done\n",
+      "Importando Datos\n",
+      "Fallecidos Acumulados\n",
+      "Fallecidos Excesivos\n",
+      "Infectados Activos Minciencia\n",
+      "Sochimi\n",
+      "Import Population\n",
+      "Infectados Activos\n",
+      "Infectados diarios\n",
+      "Infectados Acumulados\n",
+      "Done\n",
+      "Importando Datos\n",
+      "Fallecidos Acumulados\n",
+      "Fallecidos Excesivos\n",
+      "Infectados Activos Minciencia\n",
+      "Sochimi\n",
+      "Import Population\n",
+      "Infectados Activos\n",
+      "Infectados diarios\n",
+      "Infectados Acumulados\n",
+      "Done\n",
+      "Importando Datos\n",
+      "Fallecidos Acumulados\n",
+      "Fallecidos Excesivos\n",
+      "Infectados Activos Minciencia\n",
+      "Sochimi\n",
+      "Import Population\n",
+      "Infectados Activos\n",
+      "Infectados diarios\n",
+      "Infectados Acumulados\n",
+      "Done\n"
+     ]
+    }
+   ],
+   "source": [
+    "sims = []\n",
+    "k = [0,5,10,15,20,30,40]\n",
+    "for i in k:\n",
+    "    simulation = SEIRmodel(beta = beta,mu = mu,ScaleFactor=ScaleFactor,SeroPrevFactor=SeroPrevFactor,expinfection=expinfection,tsim = tsim,tstate=tstate, k = i,initdate=initdate)\n",
+    "    simulation.inputarray = np.array(quarantines)\n",
+    "    simulation.addquarantine()\n",
+    "    if not tstate:\n",
+    "        simulation.initialvalues(I_act0,population,R=0)\n",
+    "    sims.append(simulation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Simulate\n",
     "The different scenarios are simulated in parallel threads "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -207,9 +327,9 @@
      "text": [
       "SEIR Model\n",
       "[Parallel(n_jobs=8)]: Using backend LokyBackend with 8 concurrent workers.\n",
-      "[Parallel(n_jobs=8)]: Done   1 tasks      | elapsed:    1.3s\n",
-      "[Parallel(n_jobs=8)]: Done   2 out of   2 | elapsed:   23.5s remaining:    0.0s\n",
-      "[Parallel(n_jobs=8)]: Done   2 out of   2 | elapsed:   23.5s finished\n"
+      "[Parallel(n_jobs=8)]: Done   1 tasks      | elapsed:    0.9s\n",
+      "[Parallel(n_jobs=8)]: Done   2 out of   2 | elapsed:   30.4s remaining:    0.0s\n",
+      "[Parallel(n_jobs=8)]: Done   2 out of   2 | elapsed:   30.4s finished\n"
      ]
     },
     {
@@ -249,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,17 +378,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Accumulated infected\n",
-    "simulation.plotAccumulatedInfected(reales=True,days=0,enddate=enddate, ylim=22000)"
+    "simulation.plotAccumulatedInfected(reales=True,days=0,enddate=enddate)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
