Python tutorial expansion

--- a/tutorial python/pydlab_class3_Pandas.ipynb
+++ b/tutorial python/pydlab_class3_Pandas.ipynb
@@ -1000,6 +1000,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Filtrar datos Usando una lista de valores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    def importinfectadosacumulados(self=None,endpoint = 'https://raw.githubusercontent.com/MinCiencia/Datos-COVID19/master/output/producto1/Covid-19.csv',initdate = None):     \n",
+    "        if self:\n",
+    "            tstate = self.tstate\n",
+    "            initdate = self.initdate\n",
+    "        else:\n",
+    "            if not tstate:\n",
+    "                raise Exception(\"State code missing\")\n",
+    "            if not initdate:\n",
+    "                raise Exception(\"Initial date missing\")\n",
+    "        \n",
+    "        aux = pd.read_csv(endpoint)\n",
+    "        \n",
+    "        if type(tstate) == list:            \n",
+    "            I_ac_r = aux.loc[aux['Codigo region'].isin(tstate)].iloc[:,5:-1]            \n",
+    "            I_ac_r = I_ac_r.append(aux.loc[aux['Codigo comuna'].isin(tstate)].iloc[:,5:-1])\n",
+    "            I_ac_r = I_ac_r.sum()            "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Agregar Datos"
    ]
   },
