--- a/Examples/SEIR_Saturation_Kinetics_Dynamics.ipynb
+++ b/Examples/SEIR_Saturation_Kinetics_Dynamics.ipynb
@@ -22,8 +22,8 @@
    "source": [
     "import sys\n",
     "from pathlib import Path\n",
-    "sys.path.insert(1, '../src/')\n",
-    "sys.path.insert(1, 'src/')\n",
+    "sys.path.insert(1, '../src/SEIR/')\n",
+    "sys.path.insert(1, 'src/SEIR/')\n",
     "from SEIRmodel import SEIRmodel\n",
     "import numpy as np\n",
     "from datetime import datetime\n",
