--- a/research/SEIR Data Fit.ipynb
+++ b/research/SEIR Data Fit.ipynb
@@ -10,16 +10,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "from pathlib import Path\n",
-    "sys.path.insert(1, '../SEIR/')\n",
-    "sys.path.insert(1, 'SEIR/')\n",
-    "sys.path.insert(1, '..Data/')\n",
-    "sys.path.insert(1, 'Data/')\n",
+    "sys.path.insert(1, '../src/SEIR/')\n",
+    "sys.path.insert(1, 'src/SEIR/')\n",
+    "sys.path.insert(1, '../src/Data/')\n",
+    "sys.path.insert(1, 'src/Data/')\n",
     "sys.path.insert(1, '../')\n",
     "\n",
     "from datetime import datetime\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,9 +72,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data importada\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Infectados Acumulados y Diarios\n",
@@ -153,7 +161,7 @@
     "Ir=Ir[index:]\n",
     "Ir_dates=Ir_dates[index:]\n",
     "tr = [(Ir_dates[i]-initdate).days for i in range(len(Ir))]\n",
-    "print('Infectados Activos')\n",
+    "\n",
     "\n",
     "# Population:\n",
     "\n",
@@ -172,7 +180,8 @@
     "        population = aux.loc[aux['Codigo region']==int(tstate)].iloc[:,4].sum()\n",
     "    if len(tstate)>2:\n",
     "        population = int(aux.loc[aux['Codigo comuna'] == int(tstate)].iloc[:,4])\n",
-    "\n"
+    "\n",
+    "print('Data importada')"
    ]
   },
   {
