--- a/research/SEIR_SFK_scaling.ipynb
+++ b/research/SEIR_SFK_scaling.ipynb
@@ -31,8 +31,8 @@
    "source": [
     "import sys\n",
     "from pathlib import Path\n",
-    "sys.path.insert(1, '../SEIR/')\n",
-    "sys.path.insert(1, 'SEIR/')\n",
+    "sys.path.insert(1, '../src/SEIR/')\n",
+    "sys.path.insert(1, 'src/SEIR/')\n",
     "from SEIRmodel import SEIRmodel\n",
     "import numpy as np\n",
     "from datetime import datetime\n",
