--- a/Examples/SEIR Optimization.ipynb
+++ b/Examples/SEIR Optimization.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SEIR Optimization"
+    "# SEIR Optimization\n",
+    "\n",
+    "Basado en pygmo:\n",
+    "https://esa.github.io/pygmo2/"
    ]
   },
   {
@@ -34,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create Optimization Object"
+    "## Create Pygmo Optimization Object"
    ]
   },
   {
@@ -163,8 +166,30 @@
     "pop = algo.evolve(pop)\n",
     "t1 = time()\n",
     "print('Optimization takes %f seconds' %(t1-t0))\n",
+    "print('Fitness Value')\n",
     "print(pop.champion_f)\n",
+    "print('Optimal arguments')\n",
     "print(pop.champion_x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1.       ,  1.8726499, 30.       ])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pop.champion_x"
    ]
   },
   {
