SEIR_Data_Fit at research fix

--- a/research/SEIR Data Fit.ipynb
+++ b/research/SEIR Data Fit.ipynb
@@ -26,6 +26,7 @@
     "from datetime import timedelta\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib tk\n",
+    "# windows %matplotlib qt\n",
     "from joblib import Parallel, delayed\n",
     "import multiprocessing\n",
     "\n",
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,14 +218,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "s1 = alphafunct(0.5)\n",
-    "s2 = alphafunct(0.6)\n",
-    "s3 = alphafunct(0.7)\n",
-    "quarantines = [s1,s2,s3]"
+    "s1 = Quarantine(0.5)\n",
+    "s2 = Quarantine(0.6)\n",
+    "s3 = Quarantine(0.7)\n",
+    "quarantines = [s1.alpha,s2.alpha,s3.alpha]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s1.plot()"
    ]
   },
   {
