Matplotlib popup OS compatibility added SEIRDataFit

--- a/research/SEIR Data Fit.ipynb
+++ b/research/SEIR Data Fit.ipynb
@@ -24,8 +24,15 @@
     "\n",
     "from datetime import datetime\n",
     "from datetime import timedelta\n",
+    "\n",
+    "import platform\n",
+    "OS = platform.system()\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib tk\n",
+    "if OS == 'Linux':\n",
+    "    %matplotlib tk\n",
+    "if OS == 'Linux':\n",
+    "    %matplotlib tk    \n",
     "# windows %matplotlib qt\n",
     "from joblib import Parallel, delayed\n",
     "import multiprocessing\n",
