SEIR class modifications

--- a/Examples/SEIR Optimization.ipynb
+++ b/Examples/SEIR Optimization.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
     "import pandas as pd\n",
     "from time import time\n",
     "\n",
-    "from class_SEIR2 import SEIR\n",
+    "from class_SEIR import SEIR\n",
     "from importdata import ImportData as importdata\n",
     "from Quarantine import Quarantine"
    ]
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,16 +148,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Optimization takes 15.059035 seconds\n",
-      "[447611.10477838]\n",
-      "[ 1.         1.8726499 30.       ]\n"
+      "Optimization takes 4.012479 seconds\n",
+      "Fitness Value\n",
+      "[24150.30607111]\n",
+      "Optimal arguments\n",
+      "[0.10127714 0.63360865 0.58954565]\n"
      ]
     }
    ],
@@ -174,16 +176,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 1.       ,  1.8726499, 30.       ])"
+       "array([0.10127714, 0.63360865, 0.58954565])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,6 +193,42 @@
    "source": [
     "pop.champion_x"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_out = SEIR(tsim=tsim,alpha=1,beta=0.4,mu=1,k=1,I=Ir[0],I_ac=I_ac_r[0],population=1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_out.beta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
