SEIR class modifications

--- a/Examples/SEIR Optimization.ipynb
+++ b/Examples/SEIR Optimization.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,6 +28,20 @@
     "import pandas as pd\n",
     "from time import time\n",
     "\n",
+    "import platform\n",
+    "OS = platform.system()\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "if OS == 'Linux':    \n",
+    "    %matplotlib tk\n",
+    "    print('Linux')\n",
+    "elif OS == 'Windows':\n",
+    "    %matplotlib qt\n",
+    "    print('Windows')\n",
+    "else:\n",
+    "    print('OS not detected :-|')\n",
+    "\n",
+    "\n",
     "from class_SEIR import SEIR\n",
     "from importdata import ImportData as importdata\n",
     "from Quarantine import Quarantine"
@@ -42,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,19 +94,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Infectados Activos\n",
-      "Infectados Acumulados\n",
-      "Import Population\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import data: \n",
     "tstate = '13'\n",
@@ -112,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,21 +152,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Optimization takes 4.012479 seconds\n",
-      "Fitness Value\n",
-      "[24150.30607111]\n",
-      "Optimal arguments\n",
-      "[0.10127714 0.63360865 0.58954565]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "t0 = time()\n",
     "pop = algo.evolve(pop)\n",
@@ -176,51 +168,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.10127714, 0.63360865, 0.58954565])"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pop.champion_x"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "test_out = SEIR(tsim=tsim,alpha=1,beta=0.4,mu=1,k=1,I=Ir[0],I_ac=I_ac_r[0],population=1000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.4"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_out.beta"
+    "# Single simulation example"
    ]
   },
   {
@@ -228,7 +187,49 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tsim = 1000\n",
+    "beta = 0.4\n",
+    "k = 1\n",
+    "mob = 0.6\n",
+    "alpha = Quarantine(mob).alpha\n",
+    "population = 1000000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "simulation = SEIR(tsim=tsim,alpha=alpha,beta=beta,mu=1,k=k,I=Ir[0],I_ac=I_ac_r[0],population=population)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "simulation.integr_sci(0,tsim,0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "endDay = 100\n",
+    "plt.plot(simulation.t[:endDay],simulation.S[:endDay],label='S')\n",
+    "plt.plot(simulation.t[:endDay],simulation.E[:endDay],label='E')\n",
+    "plt.plot(simulation.t[:endDay],simulation.I[:endDay],label='I')\n",
+    "plt.plot(simulation.t[:endDay],simulation.R[:endDay],label='R')\n",
+    "plt.legend(loc=0)\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "code",
