SEIR class modifications

--- a/Examples/SEIR Optimization.ipynb
+++ b/Examples/SEIR Optimization.ipynb
@@ -217,6 +217,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plot =)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
