SEIRHVD Fit Data Sero Prev Tools

--- a/DataFit/SEIRHVD_DataFit-MultiScenario.ipynb
+++ b/DataFit/SEIRHVD_DataFit-MultiScenario.ipynb
@@ -112,6 +112,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Simulation in multiple betas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Simulation Parameters"
    ]
   },
